--- a/members/templates/details.html
+++ b/members/templates/details.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <body>
-        <h1>
-            {{ mymember.firstname }} {{mymemeber.lastname }}
-        </h1>
-        <p>Phone: {{ mymember.phone }}</p>
-        <p>Member Since: {{ mymember.joined_date }}</p>
-        
-        <p>Back to <a href="/members">Members</a></p>
-    </body>
-</html>
+{% extends "master.html" %}
+{% block title %}
+    Details about {{ mymember.firstname }} {{ mymember.lastname }}
+{% endblock %}
+{% block content %}
+    <h1>
+        {{ mymember.firstname }} {{mymemeber.lastname }}
+    </h1>
+    <p>Phone: {{ mymember.phone }}</p>
+    <p>Member Since: {{ mymember.joined_date }}</p>
+
+    <p>Back to <a href="/members">Members</a></p>
+{% endblock %}
